--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -70,7 +70,7 @@
   file:
     path: "{{ zookeeper_conf_dir }}/"
     state: directory
-    owner: root
-    group: root
+    owner: "{{ zookeeper_user }}"
+    group: "{{ zookeeper_group }}"
     mode: 755
 
