--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,6 @@ jre_package: openjdk-8-jre-headless
 docker: False
 #data_disks_devices: ['xvde']
 zookeeper_id: 1
+zookeeper_java_opts:
+zookeeper_jmx_port: 9999
+zookeeper_heap: "{{ (ansible_memtotal_mb / 2) | int }}"
