--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,3 +9,11 @@
   include: configure.yml
   tags:
     - configure
+
+- name: Wait for ZooKeeper to start
+  wait_for:
+    host: "{{ ansible_ssh_host | default(inventory_hostname) }}"
+    port: "{{ zookeeper_client_port }}"
+    state: started
+  tags:
+    - configure
